sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:46: error: reassignment to val
      baseLibre = (baseLibre-1)%4
                ^SelectBaseball:57: error: reassignment to val
    baseLibre = getTrouBase()
              ^